--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Projeto desenvolvido para gerenciar perguntas anonimas em salas especificas, NLW06-DISCOVER",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node src/back-end'/server.js"
     },
     "repository": {
         "type": "git",
