--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "RocketQ",
     "version": "1.0.0",
     "description": "Projeto desenvolvido para gerenciar perguntas anonimas em salas especificas, NLW06-DISCOVER",
-    "main": "index.js",
+    "main": "src/server.js",
     "scripts": {
-        "start": "node src/back-end'/server.js"
+        "start": "nodemon .",
+        "init-db": "node src/db/init.js"
     },
     "repository": {
         "type": "git",
@@ -19,6 +20,11 @@
     "homepage": "https://github.com/Fernnandez/RocketQ-nlw06#readme",
     "dependencies": {
         "ejs": "^3.1.6",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "sqlite": "^4.0.23",
+        "sqlite3": "^5.0.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
     }
 }
