--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "sqlite": "^4.0.23",
-        "sqlite3": "^5.0.2"
+        "sqlite3": "^5.0.2",
+        "sweetalert2": "^11.0.18"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
