--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-    "name": "RocketQ",
-    "version": "1.0.0",
-    "description": "Projeto desenvolvido para gerenciar perguntas anonimas em salas especificas, NLW06-DISCOVER",
-    "main": "src/server.js",
-    "scripts": {
-        "start": "nodemon .",
-        "init-db": "node src/db/init.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Fernnandez/RocketQ-nlw06.git"
-    },
-    "keywords": [],
-    "author": "Angelo Fernandes",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/Fernnandez/RocketQ-nlw06/issues"
-    },
-    "homepage": "https://github.com/Fernnandez/RocketQ-nlw06#readme",
-    "dependencies": {
-        "ejs": "^3.1.6",
-        "express": "^4.17.1",
-        "sqlite": "^4.0.23",
-        "sqlite3": "^5.0.2",
-        "sweetalert2": "^11.0.18"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.7"
-    }
+	"name": "RocketQ",
+	"version": "1.0.0",
+	"description": "Projeto desenvolvido para gerenciar perguntas anonimas em salas especificas, NLW06-DISCOVER",
+	"main": "src/server.js",
+	"scripts": {
+		"start": "node src/server.js",
+		"init-db": "node src/db/init.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Fernnandez/RocketQ-nlw06.git"
+	},
+	"keywords": [],
+	"author": "Angelo Fernandes",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/Fernnandez/RocketQ-nlw06/issues"
+	},
+	"homepage": "https://github.com/Fernnandez/RocketQ-nlw06#readme",
+	"dependencies": {
+		"ejs": "^3.1.6",
+		"express": "^4.17.1",
+		"sqlite": "^4.0.23",
+		"sqlite3": "^5.0.2",
+		"sweetalert2": "^11.0.18"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.7"
+	}
 }
